--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
         <div id="root">
 
         </div>
-        <script type="text/javascript" src="assets/bundle.js"></script>
+        <script type="text/javascript" src="/assets/bundle.js"></script>
     </body>
 </html>
